# integration-monorepo

./: .pre-commit-config.yaml  package-lock.json  pyproject.toml
.github/workflows/: deploy-integrations.yaml
integrations/bar/src/bar/: main.py
scripts/: create_tags_for_changed_collections.py  get_changed_integrations.py
src/integration_monorepo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/integrations/: versions.toml
src/package/: _version.py
